--- a/ticTacToe/styles.css
+++ b/ticTacToe/styles.css
@@ -1,7 +1,8 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    background-color: #f7f7f7;
+    background-color: #181818;
+    color: silver;
     margin: 0;
     padding: 20px;
 }
